<resources>
    <string name="app_name">Android Fitness Test</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="rm_calc_title">One Rep Max</string>
    <string name="weight_label">Weight (kg)</string>
    <string name="reps_label">Reps</string>
    <string name="enter">Enter</string>

    <string name="tdee_calc_title">TDEE Calculator</string>
    <string name="height_label">Height (cm)</string>
    <string name="age_label">Age (yr)</string>
    <string name="gender_label">Gender</string>
    <string name="female_label">Female</string>
    <string name="male_label">Male</string>
    <string name="activity_label">Activity level</string>
    <string-array name="activity_entries">
        <item>BMR</item>
        <item>Sedentary</item>
        <item>Light</item>
        <item>Moderate</item>
        <item>Heavy</item>
        <item>Very Heavy</item>
    </string-array>

    <string name="str_std_title">Strength Standards</string>
    <string name="untrained_label">Untrained\n---</string>
    <string name="beginner_label">Beginner\n---</string>
    <string name="intermediate_label">Intermediate\n---</string>
    <string name="advanced_label">Advanced\n---</string>
    <string name="elite_label">Elite\n---</string>
    <string name="ohp_label">Overhead Press</string>
    <string name="dl_label">Deadlift</string>
    <string name="bp_label">Bench Press</string>
    <string name="squat_label">Squat</string>

    <string name="macro_label">Macros</string>
    <string name="carb_label">Carbs</string>
    <string name="fat_label">Fat</string>
    <string name="protein_label">Protein</string>
    <string name="carb_default">40%</string>
    <string name="macro_default">30%</string>

    <string name="routine_title">Routines</string>
    <string name="routine_title_hint">Enter a title for the routine.</string>
    <string name="routine_cycle_hint">Cycle Length</string>
    <string name="routine_days_hint">Days a Week</string>
    <string name="week">Week </string>
    <string name="workout">Workout </string>
    <string name="routine_exercise_hint">Exercise Name</string>
    <string name="routine_reps_hint">Reps</string>
    <string name="routine_sets_hint">Sets</string>
    <string name="routine_intensity_hint">Intensity</string>
    <string name="routine_intensity_label">% 1RM</string>
    <string name="routine_add_exercise">Add Exercise</string>

    <string name="routine_template_label">Routine Template</string>
    <string-array name="routine_template_titles">
        <item>Custom</item>
        <item>Texas Method</item>
        <item>5/3/1 Big but Boring</item>
        <item>5/3/1 Triumverate</item>
        <item>Smolov Jr.</item>
    </string-array>

    <string name="new_routine">New Routine</string>
</resources>
