<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
        android:id="@+id/exercise_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="9"
        android:hint="@string/routine_exercise_hint"/>
    <EditText
        android:id="@+id/exercise_sets"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:inputType="number"
        android:hint="@string/routine_sets_hint"/>
    <EditText
        android:id="@+id/exercise_reps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:inputType="number"
        android:hint="@string/routine_reps_hint"/>
    <EditText
        android:id="@+id/exercise_intensity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:inputType="number"
        android:hint="@string/routine_intensity_hint"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/routine_intensity_label"/>
</LinearLayout>